Fix alignment & z-index issues - Sticky header now on top of content - Fix centering of Trailer button content - Add margin to movie review poster

--- a/css/styles/index.css
+++ b/css/styles/index.css
@@ -82,24 +82,25 @@ figure {
 }
 
 .meta-author-links {
-        align-content: center;
-        align-items: center;
-        padding: 0.5em 0;
+	align-content: center;
+	align-items: center;
+	padding: 0.5em 0;
 }
 
 .meta-author-links a {
-        margin-left: 0.3em;
-        height: 1.3em;
+	margin-left: 0.3em;
+	height: 1.3em;
 }
 
 .meta-author-links svg {
-        width: 1.2em;
-        height: 1.2em;
+	width: 1.2em;
+	height: 1.2em;
 }
 
 @media (min-width: 600px) {
 	.movie-reviewed {
 		float: left;
+		margin-right: 1.2rem;
 	}
 }
 
